Fix locals in Code Section (Anzahl Deklarationen/Typ war nicht richtig) -> simple valide wasm-File kann jetzt erzeugt werden