@@ -1,6 +1,7 @@
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Arrays;
 
 import wasmBuilder.*;
@@ -32,22 +33,36 @@ class Main {
 					});
 			FuncType funcType3 = new FuncType(
 					new ArrayList<WasmValueType>(
-							Arrays.asList(WasmValueType.i32, WasmValueType.i32)),
-					new ArrayList<WasmValueType>(
-							Arrays.asList(WasmValueType.i32)));
+							Arrays.asList(WasmValueType.i32)),
+					new ArrayList<WasmValueType>());
+
+			FuncType emptyFuncType = new FuncType();
+			// testile1.wat sollte funktionieren
+
+			List<WasmValueType> mainLocals = (List.of(WasmValueType.i32));
+			List<WasmValueType> try1Locals = (List.of(WasmValueType.i32, WasmValueType.i32));
 
 			BytecodeBuilder bbuilder = new BytecodeBuilder();
 			ArrayList<Func> funcs = new ArrayList<>();
 
 			// Funktion erstellen und Instructions hinzufügen
-			Func func1 = bbuilder.createFunction(funcType);
-			func1.emitLocalGet(0);
-			func1.emitLocalGet(1);
-			func1.emitAdd();
-			func1.emitEnd();
+			Func main = bbuilder.createFunction(emptyFuncType, mainLocals);
+			main.emitLocalGet(0);
+			main.emitLocalSet(0);
+			main.emitEnd();
+
+			Func try1 = bbuilder.createFunction(funcType3, try1Locals);
+			try1.emitLocalGet(0);
+			try1.emitLocalSet(1);
+			try1.emitEnd();
+
+			Func try2 = bbuilder.createFunction(funcType3, try1Locals);
+			try2.emitEnd();
 
 			// Funktion(en) der ArrayList mit Funktionen hinzufügen
-			funcs.add(func1);
+			funcs.add(main);
+			funcs.add(try1);
+			funcs.add(try2);
 
 			// build aufrufen mit der ArrayList von Funktionen
 			bbuilder.build(funcs);
